# export-data-strategy-tradingview-adspower-selenium

./: README.md  pyproject.toml
src/: README.md  analyze_excel.py  check_json.py  main.py  parse_data.py  test-parse.py
